--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>Web Reader</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but Web Reader doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
+  <!-- Primary Meta Tags -->
+  <title>Web Reader | FB2 Reader</title>
+  <meta name="title" content="Web Reader | FB2 Reader">
+  <meta name="description"
+    content="Looking for an easy way to read your favorite books in the .FB2 format?  Quickly and simply access your books using our user-friendly interface, or you can sign in with your Google account to store them in the cloud and keep track of your progress.">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://reader.elisharudenkov.com/">
+  <meta property="og:title" content="Web Reader | FB2 Reader">
+  <meta property="og:description"
+    content="Looking for an easy way to read your favorite books in the .FB2 format?  Quickly and simply access your books using our user-friendly interface, or you can sign in with your Google account to store them in the cloud and keep track of your progress.">
+  <meta property="og:image" content="https://reader.elisharudenkov.com/meta_reader.jpg">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://reader.elisharudenkov.com/">
+  <meta property="twitter:title" content="Web Reader | FB2 Reader">
+  <meta property="twitter:description"
+    content="Looking for an easy way to read your favorite books in the .FB2 format?  Quickly and simply access your books using our user-friendly interface, or you can sign in with your Google account to store them in the cloud and keep track of your progress.">
+  <meta property="twitter:image" content="https://reader.elisharudenkov.com/meta_reader.jpg">
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but Web Reader doesn't work properly without JavaScript enabled. Please enable it to
+      continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
